<resources>
    <string name="app_name">Carer Help</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_client">Client Name</string>
    <string name="placeholder_address">123 Fake St., Glasnevin</string>
    <string name="placeholder_time">00:00</string>
    <string name="call_client">Call Client</string>
    <string name="client_details_heading">Client</string>
    <string name="namelbl">Name:</string>
    <string name="phonelbl">Phone:</string>
    <string name="addresslbl">Address:</string>
    <string name="placeholder_phone">0000000000</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="add_client_activity_lbl">Add Client</string>
    <string name="btn_save">Save</string>
    <string name="API_KEY">API_KEY</string>
    <string name="prefs_default_phone">0000000000</string>
    <string name="prefs_default_login">Logging in for Client: %1$s!</string>
    <string name="title_login_sms_pref">Login SMS Template</string>
    <string name="prefs_default_logout">Logging out for Client: %1$s!</string>
    <string name="title_logout_sms_pref">Logout SMS Template</string>
    <string name="title_company_phone_pref">Company Number</string>
    <string name="client_id">Client Id</string>
    <string name="time">Time:</string>
    <string name="client_address">Client Address</string>
    <string name="client_phone_number">Client Phone Number</string>
    <string name="client_id_hint">Client ID</string>
    <string name="client_name">Client Name</string>
    <string name="client_idLbl">Client ID:</string>
    <string name="placeholder_id">12345</string>
    <string name="dialogTxt">Please Set a Company Number</string>
    <string name="dialogPositiveBtn">Set Number</string>
    <string name="DialogCancleBtn">Cancel</string>
    <string name="successLogIn">Successfully Logged In</string>
    <string name="successLogOut">Successfully Logged Out</string>
    <string name="genericError">Error</string>
    <string name="edit_client">Edit Client</string>
</resources>
