<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_nameAdd"
        >

        <TextView
            android:text="@string/placeholder_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:textSize="18sp"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/placeholder_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

    </LinearLayout>

    <TextView
        android:text="@string/placeholder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_time"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/divider"
        android:layout_below="@id/linearLayout_nameAdd"
        />

</RelativeLayout>